# sot_pr2

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  controller_plugins.xml  mainpage.dox  manifest.xml  package.xml  pr2_sot_controller.yaml  sot_pr2.yaml
.travis/: after_success  before_install  build
include/sot_pr2/: pr2_controller_plugin.h  pr2_device.h  pr2_sot_controller.h  pr2_threaded_sot_controller.h
launch/: display.launch  gazebo.launch  pr2.rviz  pr2_empty_world.launch  pr2_in_kitchen.launch  pr2_kitchen.rviz  sot_pr2.launch  spawn_pr2.launch  spawn_pr2_controller.launch
python/: CMakeLists.txt  controller_test_2.py  pr2_catch.py  pr2_sot_demo.py  pr2_tests.py
robots/: pr2_light.urdf.xacro  upload_pr2.launch  upload_pr2.launch~
src/: CMakeLists.txt  dynamic.cpp  dynamic.hh  fake_controller.cpp  pr2.cpp  pr2.hh  pr2_controller_plugin.cpp  pr2_device.cpp  pr2_sot_controller.cpp  pr2_threaded_sot_controller.cpp  sot_pr2.cpp  sot_pr2.hh
src/dynamic_graph/sot/pr2/: __init__.py  pr2_tasks.py  prologue.py  prologue.py.in  robot.py  robot.py.in
urdf/sensors/: double_stereo_camera.urdf.xacro
